# promplib

./: CMakeLists.txt  README.md  package.xml  setup.py
datasets/: README.md
notebooks/: test_interactive_promps.ipynb  test_promp_ros.ipynb  test_qcartpromp_ros.ipynb  test_replayable.ipynb  test_task_promp.ipynb
plots/: README.md
promp/: __init__.py  promp.py
scripts/: replay.py  simple.py  vocal_interactive_promps.py
src/promp/: __init__.py  ik.py  interactive.py  promp.py  qcartpromp.py  refiner.py  replayable.py  ros.py
src/promp/ros/: __init__.py  bridge.py  interactive.py  qcartpromp.py  replayable.py  ros.py
